--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.0",
     "react-toastify": "^10.0.6"
   },
   "browserslist": {
