--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
