--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^16.0.0",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.16"
   }
 }
