--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,5 +52,13 @@
     "nth-check": "^2.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.16"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
+    ],
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
