--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
