--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1"
   },
   "browserslist": {
     "production": [
