--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
